--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<module>11-rest-hal-browser</module>
 		<module>12-redis</module>
 		<module>13-key-value</module>
+		<module>42-redis-repository-support</module>
 	</modules>
 
 	<properties>
